@@ -10,13 +10,21 @@ import com.example.library.repository.BookRepository;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class AuthorService {
+
+    private static final String AUTHOR_NOT_FOUND_MESSAGE = "Author not found with id: ";
+    private static final String BOOK_NOT_FOUND_MESSAGE = "Book not found with id: ";
+    private static final String AUTHOR_DTO_NULL_MESSAGE = "AuthorDto cannot be null";
+    private static final String AUTHOR_NAME_EMPTY_MESSAGE = "Author name cannot be empty";
+    private static final String AUTHOR_SURNAME_EMPTY_MESSAGE =
+            "Author surname cannot be empty";
+    private static final String AUTHOR_ALREADY_ASSOCIATED_MESSAGE =
+            "Author is already associated with this book";
 
     private final AuthorRepository authorRepository;
     private final BookRepository bookRepository;
@@ -27,62 +35,63 @@ public class AuthorService {
         this.bookRepository = bookRepository;
     }
 
+    @Transactional
     public AuthorDto create(AuthorDto authorDto, int bookId) {
         if (authorDto == null) {
-            throw new CustomException("AuthorDto cannot be null", 400);
+            throw new CustomException(AUTHOR_DTO_NULL_MESSAGE, 400);
         }
 
         Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> new CustomException("Book not found with id: " + bookId, 404));
+                .orElseThrow(() -> new CustomException(BOOK_NOT_FOUND_MESSAGE + bookId, 404));
 
         Author existingAuthor = authorRepository.findByNameAndSurname(authorDto.getName(),
                 authorDto.getSurname());
         if (existingAuthor != null) {
             if (book.getAuthors().contains(existingAuthor)) {
-                throw new CustomException("Author is already associated with this book", 400);
-            } else {
-                book.getAuthors().add(existingAuthor);
-                existingAuthor.getBooks().add(book);
-                bookRepository.save(book);
-                return AuthorMapper.toDto(existingAuthor);
+                throw new CustomException(AUTHOR_ALREADY_ASSOCIATED_MESSAGE, 400);
             }
-        } else {
-            Author newAuthor = AuthorMapper.toEntity(authorDto);
-            newAuthor.getBooks().add(book);
-            book.getAuthors().add(newAuthor);
-
-            Author savedAuthor = authorRepository.save(newAuthor);
-            return AuthorMapper.toDto(savedAuthor);
+            book.getAuthors().add(existingAuthor);
+            existingAuthor.getBooks().add(book);
+            bookRepository.save(book);
+            return AuthorMapper.toDto(existingAuthor);
         }
+
+        Author newAuthor = AuthorMapper.toEntity(authorDto);
+        newAuthor.getBooks().add(book);
+        book.getAuthors().add(newAuthor);
+
+        Author savedAuthor = authorRepository.save(newAuthor);
+        return AuthorMapper.toDto(savedAuthor);
     }
 
     public List<AuthorDto> readAll() {
         List<Author> authors = authorRepository.findAll();
         return authors.stream()
                 .map(AuthorMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AuthorDto findById(int id) {
         Author author = authorRepository.findById(id)
-                .orElseThrow(() -> new CustomException("Author not found with id: " + id, 404));
+                .orElseThrow(() -> new CustomException(AUTHOR_NOT_FOUND_MESSAGE + id, 404));
         return AuthorMapper.toDto(author);
     }
 
+    @Transactional
     public AuthorDto update(int id, AuthorDto authorDto) {
         if (authorDto == null) {
-            throw new CustomException("AuthorDto cannot be null", 400);
+            throw new CustomException(AUTHOR_DTO_NULL_MESSAGE, 400);
         }
 
         if (authorDto.getName() == null || authorDto.getName().trim().isEmpty()) {
-            throw new CustomException("Author name cannot be empty", 400);
+            throw new CustomException(AUTHOR_NAME_EMPTY_MESSAGE, 400);
         }
         if (authorDto.getSurname() == null || authorDto.getSurname().trim().isEmpty()) {
-            throw new CustomException("Author surname cannot be empty", 400);
+            throw new CustomException(AUTHOR_SURNAME_EMPTY_MESSAGE, 400);
         }
 
         Author existingAuthor = authorRepository.findById(id)
-                .orElseThrow(() -> new CustomException("Author not found with id: " + id, 404));
+                .orElseThrow(() -> new CustomException(AUTHOR_NOT_FOUND_MESSAGE + id, 404));
 
         existingAuthor.setName(authorDto.getName());
         existingAuthor.setSurname(authorDto.getSurname());
@@ -94,8 +103,7 @@ public class AuthorService {
     @Transactional
     public boolean delete(int authorId) {
         Author author = authorRepository.findById(authorId)
-                .orElseThrow(()
-                        -> new CustomException("Author not found with id: " + authorId, 404));
+                .orElseThrow(() -> new CustomException(AUTHOR_NOT_FOUND_MESSAGE + authorId, 404));
 
         Set<Book> books = new HashSet<>(author.getBooks());
         for (Book book : books) {
@@ -103,15 +111,11 @@ public class AuthorService {
             bookRepository.save(book);
 
             if (book.getAuthors().isEmpty()) {
-                //reviewRepository.deleteAll(book.getReviews());
                 bookRepository.delete(book);
             }
         }
-        author.getBooks().clear();
-        authorRepository.save(author);
-        authorRepository.delete(author);
 
+        authorRepository.delete(author);
         return true;
     }
-
 }
